--- a/templates/neural_programmer_landing.html
+++ b/templates/neural_programmer_landing.html
@@ -21,7 +21,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-2 col-sm-0"><div id="explain"><i class="fa fa-question-circle-o fa-2x" aria-hidden="true"></i></div><div id="explanation">The purpose of this chatbot is retrieving and generating answers to questions about a data source using natural language. The results are good, but we believe that we can get better and this demos are designed to help us. Thank you for your collaboration!</div></div>
+        <div class="col-md-2 col-sm-0"><div id="explain"><i class="fa fa-question-circle-o fa-2x" aria-hidden="true"></i></div><div id="explanation">The purpose of this chatbot is to retrieve and generate answers to natural language questions about a data source, using a deep learning model called neural programmer. The results are good, but we believe that we can get better and this demos are designed to help us. Thank you for your collaboration!</div></div>
         <div class="col-md-8 col-sm-12">
           <div class="col-sm-12 col-md-4">
             <div class="thumbnail">
