--- a/templates/gswjs.html
+++ b/templates/gswjs.html
@@ -33,7 +33,7 @@
         </div>
 
         {# Target text and Button #}
-        <div style="display: inline-block;" class="col-md-6">
+        <div style="display: inline-block;" class="col-md-6" id="div_result">
             <p>To: <b>German</b>
                 <select id="oov_method">
                     <option value="pbsmt" selected="selected">PBSMT</option>
@@ -48,8 +48,7 @@
     </div>
     {# OOV words#}
     <div class="row" id="oov">
-        <div style="display: inline-block;" class="col-md-3"></div>
-        <div style="display: inline-block;" id="oov_inner" class="col-md-6">
+        <div style="display: inline-block;" id="oov_inner" class="col-md-12">
             <table width="100%">
                 <thead>
                 <tr>
@@ -59,7 +58,6 @@
                 </tr>
             </table>
         </div>
-        <div style="display: inline-block;" class="col-md-3"></div>
     </div>
 </div>
 
