minor modification to GSW webpage

--- a/templates/gswjs.html
+++ b/templates/gswjs.html
@@ -34,7 +34,7 @@
 
         {# Target text and Button #}
         <div style="display: inline-block;" class="col-md-6" id="div_result">
-            <p>To: <b>German</b>
+            <p id="topar">To: <b>German</b>
                 <select id="oov_method">
                     <option value="pbsmt" selected="selected">PBSMT</option>
                     <option value="pbsmt_ortho">PBSMT + Orthographic</option>
