First churn boxes. Probably wrong

--- a/templates/churn.html
+++ b/templates/churn.html
@@ -53,6 +53,15 @@
             </div>
             <div class="col-md-1"></div>
       </div>
+
+
+    <div id="debug" class="row">
+        <div class='col-md-2'></div>
+        <div class='col-md-4'><div id='churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Churn</div></div>
+        <div class='col-md-4'><div id='non-churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Non-Churn</div></div>
+        <div class='col-md-2'></div>
+    </div>
+
     <div class="row" id="suggestions_row">
 
         <div class="col-md-1"></div>
