--- a/static/stylesheets/churn.css
+++ b/static/stylesheets/churn.css
@@ -23,3 +23,11 @@
 	background: rgba(119, 185, 248, 0.2);
 	cursor: pointer;
 }
+.step {
+  padding: 8px 20px;
+  line-height: 26px;
+  font-size: 16px;
+  border-radius: 5px;
+  position: relative;
+  color: #003366;
+}
