--- a/templates/churn.html
+++ b/templates/churn.html
@@ -57,8 +57,8 @@
 
     <div id="debug" class="row">
         <div class='col-md-2'></div>
-        <div class='col-md-4'><div id='churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Churn</div></div>
-        <div class='col-md-4'><div id='non-churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Non-Churn</div></div>
+        <div class='col-md-4'><div id='churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Churn</div></div></div>
+        <div class='col-md-4'><div id='non-churn' class='panel panel-default step col-md-10 steps_box'><div class='panel-body'>Non-Churn</div></div></div>
         <div class='col-md-2'></div>
     </div>
 
