--- a/templates/grocery_gallery.html
+++ b/templates/grocery_gallery.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <div class="container">
-
+    <div class="row" id="banner_row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10"><center><img id=banner src='{{ url_for('static', filename='assets/swisscom-logo.png') }}'></img></center></div>
+        <div class="col-md-1"></div>
+    </div>
     <div class="row">
-
-        <div class="col-lg-12">
-            <h1 class="page-header">Product BBox Detection</h1>
-        </div>
-        <p>Green Regions show Detected Products on the shelf</p>
+        <button action="/grocery">Back</button><p>Green Regions show Detected Products on the shelf</p>
         <hr>
         {% for image_name in image_names %}
         <div class="col-lg-3 col-md-5 col-xs-6 thumb">
