And more style changes of groceyr

--- a/templates/grocery.html
+++ b/templates/grocery.html
@@ -75,7 +75,7 @@
             <div class="row" id="suggestions_row">
 
                 <div class="col-md-1"></div>
-                <div class="row" class="col-md-10">
+                <div class="row" class="col-md-10" id="gallery">
                     <div class="row" id="suggestions"></div>
                     <img class="col-md-3" id=img_sug1 src='{{ url_for('static', filename='assets/grocery_images/static_8.jpg') }}'  vspace="20" ></img>
                     <img class="col-md-3" id=img_sug2 src='{{ url_for('static', filename='assets/grocery_images/static_14.jpg') }}' vspace="20"></img>
