--- a/templates/grocery_gallery.html
+++ b/templates/grocery_gallery.html
@@ -13,11 +13,12 @@
 <div class="container">
     <div class="row" id="banner_row">
         <div class="col-md-1"></div>
-        <div class="col-md-10"><center><img id=banner src='{{ url_for('static', filename='assets/swisscom-logo.png') }}'></img></center></div>
+        <div class="col-md-10"><center><img id="banner" src='{{ url_for('static', filename='assets/swisscom-logo.png') }}'></img></center></div>
         <div class="col-md-1"></div>
     </div>
     <div class="row" id="answer_row">
-        <div class="col-md-1" id="home_button"><span class="fa fa-2x fa-arrow-left"></span></div><p>Green Regions show Detected Products on the shelf</p>
+        <a id="home_button" href="/grocery"><span class="fa fa-2x fa-arrow-left"></span></a>
+        <p>Green Regions show Detected Products on the shelf</p>
         <hr>
         {% for image_name in image_names %}
         <div class="col-lg-3 col-md-5 col-xs-6 thumb">
