Slight modification on KP indexing and missing library in chatbot

--- a/templates/error.html
+++ b/templates/error.html
@@ -31,7 +31,8 @@
                 <div class="demo">Neural Programmer Swisscom: <a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
                 <div class="demo">Name Entity Recognition (NER): <a href="/ner">/ner</a></div>
                 <div class="demo">Opinion Target: <a href="/opinion">/opinion</a></div>
-                <div class="demo">Key Phrase Extraction: <a href="/kp/emb">/kp/emb</a></div>
+                <div class="demo">Key Phrase Extraction: <a href="/kp">/kp</a></div>
+                <div class="demo">Key Phrase Extraction (Group): <a href="/kp/emb">/kp/emb</a></div>
                 <div class="demo">Summarization: <a href="/summary">/summary</a></div>
                 <div class="demo">Chatbot Goal Oriented: <a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
                 <div class="demo">Argumentation: <a href="/argumentation">/argumentation</a></div>
@@ -40,7 +41,7 @@
                 <div class="demo">Grocery Identification: <a href="/grocery">/grocery</a></div>
                 <div class="demo">GSW: <a href="/gsw">/gsw</a></div>
                 <div class="demo">Machine Translation: <a href="/translate">/translate</a></div>
-                <div class="demo">SFID: <a href="/sfid">/sfid</a></div>
+                <div class="demo">Slot Filling and Intent Detection: <a href="/sfid">/sfid</a></div>
             </div>
             <div class="col-md-1"></div>
         </div>
