modified gallery html

--- a/templates/grocery/grocery_gallery.html
+++ b/templates/grocery/grocery_gallery.html
@@ -18,7 +18,9 @@
     </div>
     <div class="row" id="answer_row">
         <a id="home_button" href="/grocery"><span class="fa fa-2x fa-arrow-left"></span></a>
-        <p>Green Regions show Detected Products on the shelf</p>
+        <p>Boxes show detected regions on the shelf</p>
+        <p>First Processed Image: Same products grouped together</p>
+        <p>Second Processed Image: Finer detection of the products</p>
         <hr>
         {% for image_name in image_names %}
         <div class="col-lg-3 col-md-5 col-xs-6 thumb">
