add jQuery in site layout template

--- a/templates/ui-kit/demo.template.html
+++ b/templates/ui-kit/demo.template.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block scripts %}
     {{ super() }}
-    {# Add custom scripts here. #}
+    {# Add custom scripts here. jQuery is already imported. #}
 {% endblock %}
 {% block title %}
     {# Define demo title here. Keep it short. There is extra space for a description below.#}
