--- a/templates/ui-kit/site_layout.html
+++ b/templates/ui-kit/site_layout.html
@@ -59,6 +59,9 @@
 {% block scripts %}
     <!-- Swisscom SDX JS Library -->
     <script src="{{ url_for('static', filename='ui-kit/sdx/js/sdx.min.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
+    </script>
 {% endblock %}
 </body>
 </html>
