--- a/static/ui-kit/custom/scss/common/_variables.scss
+++ b/static/ui-kit/custom/scss/common/_variables.scss
@@ -3,3 +3,15 @@
 */
 
 $light-blue: #EEF3F6;
+$blue: #1781E3;
+
+/*
+* Padding
+*/
+
+$padding-xsmall: 4px;
+$padding-small: 8px;
+$padding-medium: 16px;
+$padding-large: 24px;
+$padding-xlarge: 32px;
+$padding-xxlarge: 40px;
