make history scrallable and add bot icon

--- a/static/ui-kit/custom/scss/chatbot-layout.scss
+++ b/static/ui-kit/custom/scss/chatbot-layout.scss
@@ -6,7 +6,6 @@
   flex-direction: column;
   background-color: $light-blue;
   height: 560px;
-  padding: $padding-medium;
   border-radius: 5px;
 
 }
@@ -15,12 +14,16 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow-y: auto;
+  padding: 0 $padding-medium;
 
 }
 
 .chat-area__input {
   display: flex;
-  margin-top: $padding-medium;
+  min-height: 48px;
+  margin: $padding-medium !important;
+
 }
 
 .chat-area__input > input {
@@ -40,14 +43,28 @@
   height: auto;
 }
 
-.speech-buble {
+.bot-buble-container {
+  displa: block;
+}
+
+.bot-buble-container__inner {
   display: flex;
-  flex-direction: column;
+  > img {
+    align-self: flex-start;
+    margin-right: $padding-medium;
+  }
+
+  &:first-of-type {
+    margin-top: $padding-medium;
+  }
+}
+
+.speech-buble {
   padding: $padding-medium $padding-large;
   background-color: white;
   margin-bottom: $padding-medium;
   border-radius: 0 10px 10px 10px;
-  width: 420px;
+  max-width: 420px;
 
 }
 
@@ -65,7 +82,7 @@
   background-color: $blue;
   color: #fff;
   border-radius: 10px 0 10px 10px;
-  width: 400px;
+  max-width: 400px;
 
 }
 
@@ -78,7 +95,7 @@
 }
 
 .text-label {
-  margin-bottom: 8px;
+  margin-bottom: $padding-small;
   font-size: 14px;
 
 }
@@ -86,7 +103,7 @@
 .detected-information {
   display: flex;
   flex-direction: column;
-  margin-top: 16px;
+  margin-top: $padding-medium;
 }
 
 .detected-information > P {
