--- a/templates/sfid/sfid.html
+++ b/templates/sfid/sfid.html
@@ -20,19 +20,41 @@
         <div class="col-md-6">
             <div class="chat-area">
                 <div class="chat-area__history">
-                    <div class="speech-buble">
-                        <p>Type a question or choose from one of our suggestions…</p>
+                    <div class="bot-buble-container">
+                        <div class="bot-buble-container__inner">
+                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
+                            <div class="speech-buble">
+                                <p>Type a question or choose from one of our suggestions…</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="speech-buble speech-buble--user">
                         <p>Who played Kyle Reese in Terminator?</p>
                     </div>
-                    <div class="speech-buble">
-                        <p>I love your questions about <span class="text-height">movies</span> ...</p>
-                        <div class="detected-information">
-                            <span class="text-label">Detected information</span>
-                            <p>Character: <span class="text-height">Kyle Reese</span></p>
-                            <p>Title: <span class="text-height">Terminator</span></p>
+                    <div class="bot-buble-container">
+                        <div class="bot-buble-container__inner">
+                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
+                            <div class="speech-buble">
+                                <p>I love your questions about <span class="text-height">movies</span> ...</p>
+                                <div class="detected-information">
+                                    <span class="text-label">Detected information</span>
+                                    <p>Character: <span class="text-height">Kyle Reese</span></p>
+                                    <p>Title: <span class="text-height">Terminator</span></p>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                    <!-- extra content-->
+                    <div class="bot-buble-container">
+                        <div class="bot-buble-container__inner">
+                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
+                            <div class="speech-buble">
+                                <p>Type a question or choose from one of our suggestions…</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="speech-buble speech-buble--user">
+                        <p>Who played Kyle Reese in Terminator?</p>
                     </div>
                 </div>
                 <div class="input-field input-field--static-label chat-area__input" data-init="auto">
