--- a/templates/sfid/sfid.html
+++ b/templates/sfid/sfid.html
@@ -66,7 +66,38 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div style="background-color: yellow">Test</div>
+            <div class="sample-container">
+                <div class="sample-container__header">
+                    <h4>Suggested sample questions</h4>
+                    <i class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal" aria-hidden="true"></i>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">3 lines of text Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="sample-box">Who played Kyle Reese in Terminator?</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
