--- a/templates/sfid/sfid.html
+++ b/templates/sfid/sfid.html
@@ -11,11 +11,11 @@
             {
                 sampleLink: 'http://127.0.0.1:5000/static/javascripts/lists/sfid.json',
                 chatbotVocabulary: {
-                    startingConversation: '', answeringQuestion: []
+                    startingConversation: 'Type a question or choose one of our suggestions.', answeringQuestion: []
                 },
                 numberOfSamples: 8
             }
-        )
+        );
     </script>
 {% endblock %}
 {% block title %}
@@ -30,43 +30,8 @@
     <div class="row">
         <div class="col-md-6">
             <div class="chat-area">
-                <div class="chat-area__history">
-                    <div class="bot-buble-container">
-                        <div class="bot-buble-container__inner">
-                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
-                            <div class="speech-buble">
-                                <p>Type a question or choose from one of our suggestions…</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="speech-buble speech-buble--user">
-                        <p>Who played Kyle Reese in Terminator?</p>
-                    </div>
-                    <div class="bot-buble-container">
-                        <div class="bot-buble-container__inner">
-                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
-                            <div class="speech-buble">
-                                <p>I love your questions about <span class="text-height">movies</span> ...</p>
-                                <div class="detected-information">
-                                    <span class="text-label">Detected information</span>
-                                    <p>Character: <span class="text-height">Kyle Reese</span></p>
-                                    <p>Title: <span class="text-height">Terminator</span></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- extra content-->
-                    <div class="bot-buble-container">
-                        <div class="bot-buble-container__inner">
-                            <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>
-                            <div class="speech-buble">
-                                <p>Type a question or choose from one of our suggestions…</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="speech-buble speech-buble--user">
-                        <p>Who played Kyle Reese in Terminator?</p>
-                    </div>
+                <div id="chat-data" class="chat-area__history">
+                    {# Samples will be added here#}
                 </div>
                 <div class="input-field input-field--static-label chat-area__input" data-init="auto">
                     <input type="text" id="static-label-input-1" placeholder="Ask a question">
@@ -84,9 +49,23 @@
                        aria-hidden="true"></i>
                 </div>
                 <div id="sample-data" class="row">
-
+                    {# Samples will be added here#}
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
+{#<div class="bot-buble-container">#}
+{#    <div class="bot-buble-container__inner">#}
+{#        <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>#}
+{#        <div class="speech-buble">#}
+{#            <p>I love your questions about <span class="text-height">movies</span> ...</p>#}
+{#            <div class="detected-information">#}
+{#                <span class="text-label">Detected information</span>#}
+{#                <p>Character: <span class="text-height">Kyle Reese</span></p>#}
+{#                <p>Title: <span class="text-height">Terminator</span></p>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
