--- a/templates/sfid/sfid.html
+++ b/templates/sfid/sfid.html
@@ -3,35 +3,18 @@
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='ui-kit/custom/css/chatbot-layout.css') }}">
 {% endblock %}
-{% block scripts %}
-    {{ super() }}
-    <script src="{{ url_for('static', filename='ui-kit/custom/js/chatbot-layout.js') }}"></script>
-    <script>
-        ChatbotLayout.config(
-            {
-                sampleLink: 'http://127.0.0.1:5000/static/javascripts/lists/sfid.json',
-                chatbotVocabulary: {
-                    startingConversation: 'Type a question or choose one of our suggestions.', answeringQuestion: []
-                },
-                numberOfSamples: 8
-            }
-        );
-    </script>
-{% endblock %}
 {% block title %}
     Slot Filling and Intent Detection
 {% endblock %}
 {% block description %}
     This is a demo description.
 {% endblock %}
-
-
 {% block content %}
     <div class="row">
         <div class="col-md-6">
             <div class="chat-area">
                 <div id="chat-data" class="chat-area__history">
-                    {# Samples will be added here#}
+                    {# Speech bubbles will be added here#}
                 </div>
                 <div class="input-field input-field--static-label chat-area__input" data-init="auto">
                     <input id="input-submit" type="text" id="static-label-input-1" placeholder="Ask a question">
@@ -55,17 +38,8 @@
         </div>
     </div>
 {% endblock %}
-
-{#<div class="bot-buble-container">#}
-{#    <div class="bot-buble-container__inner">#}
-{#        <img src="{{ url_for('static', filename='ui-kit/custom/assets/bot.svg') }}"/>#}
-{#        <div class="speech-buble">#}
-{#            <p>I love your questions about <span class="text-height">movies</span> ...</p>#}
-{#            <div class="detected-information">#}
-{#                <span class="text-label">Detected information</span>#}
-{#                <p>Character: <span class="text-height">Kyle Reese</span></p>#}
-{#                <p>Title: <span class="text-height">Terminator</span></p>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
+{% block scripts %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='ui-kit/custom/js/chatbot-layout.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascripts/sfid.js') }}"></script>
+{% endblock %}
