add loader for samples

--- a/templates/sfid/sfid.html
+++ b/templates/sfid/sfid.html
@@ -31,6 +31,9 @@
                     <i id="btn-refresh" class="btn-sample-refresh icon icon-071-retry icon--s3 icon--flip-horizontal"
                        aria-hidden="true"></i>
                 </div>
+                <div class="sample-data-loader">
+                    <div class="loader-spinner loader-spinner--large loader-spinner--plain"></div>
+                </div>
                 <div id="sample-data" class="row">
                     {# Samples will be added here#}
                 </div>
