--- a/static/ui-kit/custom/scss/chatbot-layout.scss
+++ b/static/ui-kit/custom/scss/chatbot-layout.scss
@@ -166,7 +166,7 @@
 }
 
 .ellipsis-loader {
-    display: flex;
+  display: flex;
   > div {
     animation-name: blink;
     animation-duration: 1.6s;
@@ -189,3 +189,13 @@
 /*
 * Ellipsis loader end
 */
+
+/*
+* Sample loader start
+ */
+.sample-data-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 416px;
+}
